--- a/6. Телефонная книга/PhoneBook/PhoneBook/PhoneBook.csproj
+++ b/6. Телефонная книга/PhoneBook/PhoneBook/PhoneBook.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\IDbService.cs" />
     <Compile Include="Models\RecordViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DbService.cs" />
